Fix spacing between header and top of the screen

--- a/sts_inquiry/static/style.css
+++ b/sts_inquiry/static/style.css
@@ -12,7 +12,7 @@ a {
 /* Header */
 
 header {
-    margin: 1em 0 5em 0;
+    margin: 2em 0 5em 0;
     text-align: center;
 }
 
